[package]
name = "pgp_rb"
version = "1.0.0"
edition = "2021"

[dependencies]
pgp = "0.13.1"
rand = "0.8.5"
magnus = { git = "https://github.com/matsadler/magnus.git", default_features = false }
base64 = "0.21.7"
num-traits = "0.2.18"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
