[package]
name = "pgp_rb"
version = "1.0.0"
edition = "2021"

[dependencies]
pgp = "0.14.1"
rand = "0.8.5"
magnus = "0.7.1"
base64 = "0.21.7"
num-traits = "0.2.18"
rb-sys = { version = "0.9.105", features = ["ruby-static"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
